# Magelvl3

./: CMakeLists.txt  README.md
Core/: CMakeLists.txt
Core/include/: Application.h  ServiceLocator.h
Core/src/: Application.cpp  EntryPoint.cpp
ECS/: CMakeLists.txt
Graphics/: CMakeLists.txt
Graphics/Resources/lib/: GenericCodeGend.lib  OGLCompilerd.lib  OSDependentd.lib  glfw3.lib  glm.lib  glslang-default-resource-limitsd.lib  glslangd.lib
Graphics/include/: CameraComponent.h  ModelComponent.h  Vizualisation.h
Graphics/include/Shaders/: Compile.bat  Default.frag  Default.vert  Shadow.frag  Shadow.vert  frag.spv  sFrag.spv  sVert.spv  vert.spv
Graphics/include/Vulkan/: Renderer.h
Graphics/include/none/: Renderer.h
Graphics/src/: CameraComponent.cpp  ModelComponent.cpp  Vizualisation.cpp
Graphics/src/none/: Renderer.cpp
Graphics/src/vulkan/: Renderer.cpp
Network/: CMakeLists.txt
Physics/: CMakeLists.txt
Physics/include/: PhysicsBase.h  RigidBody.h
Physics/src/: PhysicsBase.cpp  RigidBody.cpp
Sandbox/: CMakeLists.txt
Sandbox/include/: Sandbox.h
Sandbox/src/: Sandbox.cpp
Utilities/: CMakeLists.txt
Utilities/include/: Component.h  ECS.h  Observer.h  Primitives.h  RendererSpec.h  TFixedArray.h  Transform.h  Vector.h
Utilities/src/: Component.cpp  ECS.cpp  TFixedArray.cpp  Transform.cpp
Utils/: CMakeLists.txt
